WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
304378
html/semantics/scripting-1/the-script-element/json-module/repeated-imports.any.sharedworker.html is a flaky crash in debug
https://bugs.webkit.org/show_bug.cgi?id=304378
Summary
html/semantics/scripting-1/the-script-element/json-module/repeated-imports.an...
Chris Dumez
Reported
2025-12-17 19:43:01 PST
html/semantics/scripting-1/the-script-element/json-module/repeated-imports.any.sharedworker.html is a flaky crash in debug: ``` Thread 5 Crashed:: WebCore: SharedWorker 0 WebCore 0x3002d4ab4 WTFCrashWithInfo(int, char const*, char const*, int) + 100 1 WebCore 0x30010cdf0 WebCore::ContextDestructionObserver::observeContext(WebCore::ScriptExecutionContext*) + 212 2 WebCore 0x3001233cc WebCore::ContextDestructionObserver::~ContextDestructionObserver() + 68 3 WebCore 0x305b23f98 WebCore::ActiveDOMCallback::~ActiveDOMCallback() + 32 4 WebCore 0x304de987c WebCore::DOMGuardedObject::~DOMGuardedObject() + 96 5 WebCore 0x300bf40dc WebCore::DOMGuarded<JSC::JSPromise>::~DOMGuarded() + 32 6 WebCore 0x300e255c0 WebCore::DeferredPromise::~DeferredPromise() + 32 7 WebCore 0x300e2555c WebCore::DeferredPromise::~DeferredPromise() + 32 8 WebCore 0x300e2558c WebCore::DeferredPromise::~DeferredPromise() + 32 9 WebCore 0x30089c1c4 WTF::RefCounted<WebCore::DOMGuardedObject>::deref() const + 100 10 WebCore 0x30089c154 WebCore::DOMGuardedObject::deref() const + 32 11 WebCore 0x30089c0f4 WTF::DefaultRefDerefTraits<WebCore::DeferredPromise>::derefIfNotNull(WebCore::DeferredPromise*) + 40 12 WebCore 0x30089c6c4 WTF::RefPtr<WebCore::DeferredPromise, WTF::RawPtrTraits<WebCore::DeferredPromise>, WTF::DefaultRefDerefTraits<WebCore::DeferredPromise>>::~RefPtr() + 44 13 WebCore 0x30089a47c WTF::RefPtr<WebCore::DeferredPromise, WTF::RawPtrTraits<WebCore::DeferredPromise>, WTF::DefaultRefDerefTraits<WebCore::DeferredPromise>>::~RefPtr() + 32 14 WebCore 0x304dc6154 WebCore::ModuleScriptLoader::~ModuleScriptLoader() + 92 15 WebCore 0x304ec08c0 WebCore::WorkerModuleScriptLoader::~WorkerModuleScriptLoader() + 120 16 WebCore 0x304ec0a1c WebCore::WorkerModuleScriptLoader::~WorkerModuleScriptLoader() + 32 17 WebCore 0x304ec0a68 WebCore::WorkerModuleScriptLoader::~WorkerModuleScriptLoader() + 32 18 WebCore 0x304e2ccd4 WTF::RefCounted<WebCore::ModuleScriptLoader>::deref() const + 100 19 WebCore 0x304fa2df0 WTF::DefaultRefDerefTraits<WebCore::ModuleScriptLoader>::derefIfNotNull(WebCore::ModuleScriptLoader*) + 44 20 WebCore 0x304fa2db0 WTF::Ref<WebCore::ModuleScriptLoader, WTF::RawPtrTraits<WebCore::ModuleScriptLoader>, WTF::DefaultRefDerefTraits<WebCore::ModuleScriptLoader>>::~Ref() + 64 21 WebCore 0x304ea54c4 WTF::Ref<WebCore::ModuleScriptLoader, WTF::RawPtrTraits<WebCore::ModuleScriptLoader>, WTF::DefaultRefDerefTraits<WebCore::ModuleScriptLoader>>::~Ref() + 32 22 WebCore 0x304ecfd08 WTF::HashTable<WTF::Ref<WebCore::ModuleScriptLoader, WTF::RawPtrTraits<WebCore::ModuleScriptLoader>, WTF::DefaultRefDerefTraits<WebCore::ModuleScriptLoader>>, WTF::Ref<WebCore::ModuleScriptLoader, WTF::RawPtrTraits<WebCore::ModuleScriptLoader>, WTF::DefaultRefDerefTraits<WebCore::ModuleScriptLoader>>, WTF::IdentityExtractor, WTF::DefaultHash<WTF::Ref<WebCore::ModuleScriptLoader, WTF::RawPtrTraits<WebCore::ModuleScriptLoader>, WTF::DefaultRefDerefTraits<WebCore::ModuleScriptLoader>>>, WTF::HashTraits<WTF::Ref<WebCore::ModuleScriptLoader, WTF::RawPtrTraits<WebCore::ModuleScriptLoader>, WTF::DefaultRefDerefTraits<WebCore::ModuleScriptLoader>>>, WTF::HashTraits<WTF::Ref<WebCore::ModuleScriptLoader, WTF::RawPtrTraits<WebCore::ModuleScriptLoader>, WTF::DefaultRefDerefTraits<WebCore::ModuleScriptLoader>>>, WTF::FastMalloc>::deallocateTable(WTF::Ref<WebCore::ModuleScriptLoader, WTF::RawPtrTraits<WebCore::ModuleScriptLoader>, WTF::DefaultRefDerefTraits<WebCore::ModuleScriptLoader>>*) + 100 23 WebCore 0x304ecfbdc WTF::HashTable<WTF::Ref<WebCore::ModuleScriptLoader, WTF::RawPtrTraits<WebCore::ModuleScriptLoader>, WTF::DefaultRefDerefTraits<WebCore::ModuleScriptLoader>>, WTF::Ref<WebCore::ModuleScriptLoader, WTF::RawPtrTraits<WebCore::ModuleScriptLoader>, WTF::DefaultRefDerefTraits<WebCore::ModuleScriptLoader>>, WTF::IdentityExtractor, WTF::DefaultHash<WTF::Ref<WebCore::ModuleScriptLoader, WTF::RawPtrTraits<WebCore::ModuleScriptLoader>, WTF::DefaultRefDerefTraits<WebCore::ModuleScriptLoader>>>, WTF::HashTraits<WTF::Ref<WebCore::ModuleScriptLoader, WTF::RawPtrTraits<WebCore::ModuleScriptLoader>, WTF::DefaultRefDerefTraits<WebCore::ModuleScriptLoader>>>, WTF::HashTraits<WTF::Ref<WebCore::ModuleScriptLoader, WTF::RawPtrTraits<WebCore::ModuleScriptLoader>, WTF::DefaultRefDerefTraits<WebCore::ModuleScriptLoader>>>, WTF::FastMalloc>::~HashTable() + 68 24 WebCore 0x304ecfb88 WTF::HashTable<WTF::Ref<WebCore::ModuleScriptLoader, WTF::RawPtrTraits<WebCore::ModuleScriptLoader>, WTF::DefaultRefDerefTraits<WebCore::ModuleScriptLoader>>, WTF::Ref<WebCore::ModuleScriptLoader, WTF::RawPtrTraits<WebCore::ModuleScriptLoader>, WTF::DefaultRefDerefTraits<WebCore::ModuleScriptLoader>>, WTF::IdentityExtractor, WTF::DefaultHash<WTF::Ref<WebCore::ModuleScriptLoader, WTF::RawPtrTraits<WebCore::ModuleScriptLoader>, WTF::DefaultRefDerefTraits<WebCore::ModuleScriptLoader>>>, WTF::HashTraits<WTF::Ref<WebCore::ModuleScriptLoader, WTF::RawPtrTraits<WebCore::ModuleScriptLoader>, WTF::DefaultRefDerefTraits<WebCore::ModuleScriptLoader>>>, WTF::HashTraits<WTF::Ref<WebCore::ModuleScriptLoader, WTF::RawPtrTraits<WebCore::ModuleScriptLoader>, WTF::DefaultRefDerefTraits<WebCore::ModuleScriptLoader>>>, WTF::FastMalloc>::~HashTable() + 32 25 WebCore 0x304ecfb58 WTF::HashSet<WTF::Ref<WebCore::ModuleScriptLoader, WTF::RawPtrTraits<WebCore::ModuleScriptLoader>, WTF::DefaultRefDerefTraits<WebCore::ModuleScriptLoader>>, WTF::DefaultHash<WTF::Ref<WebCore::ModuleScriptLoader, WTF::RawPtrTraits<WebCore::ModuleScriptLoader>, WTF::DefaultRefDerefTraits<WebCore::ModuleScriptLoader>>>, WTF::HashTraits<WTF::Ref<WebCore::ModuleScriptLoader, WTF::RawPtrTraits<WebCore::ModuleScriptLoader>, WTF::DefaultRefDerefTraits<WebCore::ModuleScriptLoader>>>, WTF::HashTableTraits, (WTF::ShouldValidateKey)1>::~HashSet() + 32 26 WebCore 0x304ea37f4 WTF::HashSet<WTF::Ref<WebCore::ModuleScriptLoader, WTF::RawPtrTraits<WebCore::ModuleScriptLoader>, WTF::DefaultRefDerefTraits<WebCore::ModuleScriptLoader>>, WTF::DefaultHash<WTF::Ref<WebCore::ModuleScriptLoader, WTF::RawPtrTraits<WebCore::ModuleScriptLoader>, WTF::DefaultRefDerefTraits<WebCore::ModuleScriptLoader>>>, WTF::HashTraits<WTF::Ref<WebCore::ModuleScriptLoader, WTF::RawPtrTraits<WebCore::ModuleScriptLoader>, WTF::DefaultRefDerefTraits<WebCore::ModuleScriptLoader>>>, WTF::HashTableTraits, (WTF::ShouldValidateKey)1>::~HashSet() + 32 27 WebCore 0x3000ba284 WebCore::ScriptModuleLoader::~ScriptModuleLoader() + 160 28 WebCore 0x304ea3868 WebCore::ScriptModuleLoader::~ScriptModuleLoader() + 32 29 WebCore 0x304ed01c8 std::__1::default_delete<WebCore::ScriptModuleLoader>::operator()[abi:sn210106](WebCore::ScriptModuleLoader*) const + 48 30 WebCore 0x304ed0188 std::__1::unique_ptr<WebCore::ScriptModuleLoader, std::__1::default_delete<WebCore::ScriptModuleLoader>>::reset[abi:sn210106](WebCore::ScriptModuleLoader*) + 72 31 WebCore 0x304ed0130 std::__1::unique_ptr<WebCore::ScriptModuleLoader, std::__1::default_delete<WebCore::ScriptModuleLoader>>::~unique_ptr[abi:sn210106]() + 36 32 WebCore 0x304ed00fc std::__1::unique_ptr<WebCore::ScriptModuleLoader, std::__1::default_delete<WebCore::ScriptModuleLoader>>::~unique_ptr[abi:sn210106]() + 32 33 WebCore 0x304ed00cc WTF::UniqueRef<WebCore::ScriptModuleLoader>::~UniqueRef() + 32 34 WebCore 0x304ea3a1c WTF::UniqueRef<WebCore::ScriptModuleLoader>::~UniqueRef() + 32 35 WebCore 0x308b8fc18 WebCore::WorkerOrWorkletGlobalScope::~WorkerOrWorkletGlobalScope() + 180 36 WebCore 0x308b8f8e0 WebCore::WorkerGlobalScope::~WorkerGlobalScope() + 856 37 WebCore 0x308e5ef90 WebCore::SharedWorkerGlobalScope::~SharedWorkerGlobalScope() + 52 38 WebCore 0x308e5efc0 WebCore::SharedWorkerGlobalScope::~SharedWorkerGlobalScope() + 32 39 WebCore 0x308e5f0ec WebCore::SharedWorkerGlobalScope::operator delete(WebCore::SharedWorkerGlobalScope*, std::destroying_delete_t, unsigned long) + 156 40 WebCore 0x308e5f044 WebCore::SharedWorkerGlobalScope::~SharedWorkerGlobalScope() + 32 41 WebCore 0x300ecf0c0 WTF::RefCounted<WebCore::WorkerOrWorkletGlobalScope>::deref() const + 96 42 WebCore 0x30407fe54 WTF::DefaultRefDerefTraits<WebCore::WorkerOrWorkletGlobalScope>::derefIfNotNull(WebCore::WorkerOrWorkletGlobalScope*) + 44 43 WebCore 0x308bd468c WTF::RefPtr<WebCore::WorkerOrWorkletGlobalScope, WTF::RawPtrTraits<WebCore::WorkerOrWorkletGlobalScope>, WTF::DefaultRefDerefTraits<WebCore::WorkerOrWorkletGlobalScope>>::operator=(std::nullptr_t) + 48 44 WebCore 0x308bd4534 WebCore::WorkerOrWorkletThread::destroyWorkerGlobalScope(WTF::Ref<WebCore::WorkerOrWorkletThread, WTF::RawPtrTraits<WebCore::WorkerOrWorkletThread>, WTF::DefaultRefDerefTraits<WebCore::WorkerOrWorkletThread>>&&) + 456 45 WebCore 0x308bd3ea8 WebCore::WorkerOrWorkletThread::workerOrWorkletThread() + 1056 46 WebCore 0x308c069bc WebCore::WorkerThread::createThread()::$_1::operator()() const + 32 47 WebCore 0x308c06960 WTF::Detail::CallableWrapper<WebCore::WorkerThread::createThread()::$_1, void>::call() + 32 48 JavaScriptCore 0x12d776850 WTF::Function<void ()>::operator()() const + 176 49 JavaScriptCore 0x12d5cbd40 WTF::Thread::entryPoint(WTF::Thread::NewThreadContext*) + 336 50 JavaScriptCore 0x12d6aa408 WTF::wtfThreadEntryPoint(void*) + 28 51 libsystem_pthread.dylib 0x189f09c58 _pthread_start + 136 52 libsystem_pthread.dylib 0x189f04c1c thread_start + 8 ```
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2025-12-17 19:43:11 PST
<
rdar://162879256
>
Chris Dumez
Comment 2
2025-12-17 19:47:51 PST
Pull request:
https://github.com/WebKit/WebKit/pull/55604
EWS
Comment 3
2025-12-18 21:15:54 PST
Committed
304727@main
(5ab99ca27efb): <
https://commits.webkit.org/304727@main
> Reviewed commits have been landed. Closing PR #55604 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug